data/collection/fixes/descriptions/scala/scala-8498
```scala
Welcome to Scala version 2.10.3 (Java HotSpot(TM) 64-Bit Server VM, Java 1.7.0_45).
Type in expressions to have them evaluated.
Type :help for more information.

scala> class C(val s: String) extends AnyVal {
     |   @scala.reflect.internal.annotations.compileTimeOnly("error")
     |   def error = ???
     | }
<console>:9: error: error
         def error = ???
                     ^
```